gcc-14.2.0/gcc/testsuite/gm2/iso/fail/constprocedure.mod
version https://git-lfs.github.com/spec/v1
oid sha256:c87d8ba82a2326b7d9d4b883fd612007b8b0f988c131eb0c73030b011ece8f66
size 902
